* Upgrade Spring Boot to v3.0.1 * Remove spring-fox and update it with springdoc-openapi * Add Exception Handling * Add Unit Tests and Integration Tests using Test Containers